tests/models/enum/named/u64/fail/max_length.stderr
error: Support condition is gt, ge, lt, le, alias, default and validate
 --> tests/models/enum/named/u64/fail/max_length.rs:6:9
  |
6 |         value: u64
  |         ^^^^^
